<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cnergee Billing Solutions</string>

    <!--    <string name="app_run_mode">dev</string>-->
    <string name="app_run_mode">prod</string>
    <string name="menu_settings">Settings</string>

    <string name="title_activity_main">Cnergee Billing Solutions</string>
    <string name="title_activity_login">Authentication</string>
    <string name="title_activity_search">Cnergee Billing Solutions</string>
    <string name="title_activity_show_details">Cnergee Billing Solutions</string>
    <string name="title_activity_renew">Cnergee Billing Solutions</string>
    <string name="title_activity_cash">Cnergee Billing Solutions</string>
    <string name="title_activity_cheue">Cnergee Billing Solutions</string>
    <string name="title_activity_payment_details">Cnergee Billing Solutions</string>
    <string name="title_activity_change_packge">Cnergee Billing Solutions</string>

    <string name="title_activity_app_settingctivity">AppSettingActivity</string>
    <string name="title_activity_search_vendor">SearchVendorActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_postpaid">PostpaidActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_updatestatus">Update Status Activity</string>
    <string name="default_label">-</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="title_activity_payment_pickup">PaymentPickupActivity</string>
    <string name="shared_preferences_name">CNERGEE_BILLING</string>
    <string name="app_exit_string">Press back again to exit</string>

    <string name="font_name">varela_round.otf</string>

    <string name="title_full_name">Name</string>
    <string name="title_address">Address</string>
    <string name="address_msg"><u>Click to View Address</u></string>
    <string name="title_mobile_no">Mobile</string>
    <string name="title_invoice_no">Invoice No</string>
    <string name="title_invoice_period">Period</string>
    <string name="title_invoice_by_duedate">Due Amount</string>
    <string name="title_paying_amount">Payment</string>
    <string name="title_show_payment_deatils"><i><u>Show Payment Details</u></i></string>
    <string name="title_payment_date">Payment Date</string>
    <string name="title_unpaid_amount">Last Unpaid Amount</string>
    <string name="title_invoice_amount">Invoice Amount</string>
    <string name="title_fine_amount">Fine Amount</string>
    <string name="title_paid_amount">Paid Amount</string>
    <string name="title_adjustment_amount">Adjustment Amount</string>
    <string name="title_due_date">Due Date</string>
    <string name="title_current_paynality">Current Penalty</string>
    <string name="title_Payment_mode">Payment Mode</string>
    <string name="rs">\u20B9</string>
    <string name="app_cheque_label_8">Reference Number</string>
    <string name="app_cheque_label_9">Comment</string>

    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>

</resources>